--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ label {
 }
 
 
-button {
+.collapse .gitnavbar-collapse button {
     height: 45px;
     padding-left: 5px;
     padding-right: 5px;
