--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,15 @@ header nav .collapse .navbar-collapse ul li a {
     color: yellow;
 }
 
+.navbar-toggler:focus {
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.50);
+}
+
+.navbar-toggler {
+    background-color: rgba(138, 138, 138, 0.548);
+
+}
+
 .nav-link {
     color: #dbdbdb;
     font-size: 20px;
@@ -68,17 +77,6 @@ ul .dropdown-menu {
 .btn {
     color: #ffffff;
     --bs-btn-bg: #00000045;
-}
-
-header div .panel-carrito {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    margin-bottom: 10px;
-}
-
-.panel-carrito a {
-    padding: 5px;
 }
 
 /**! HERO SECTION **/
@@ -420,12 +418,37 @@ section .nosotros {
 
 }
 
+.nosotros p {
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10%;
+}
+
 .mapa {
-    padding: 50px;
     display: flex;
     align-content: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 480px) {
+    .nosotros p {
+        font-size: 15px;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+    .mapa {
+        max-width: 100%;
+    }
+
+}
+
+
 
 /**! PAGE CONTACTO **/
 
@@ -433,61 +456,52 @@ section .nosotros {
 .contacto_css {
 
     font-family: 'Inter', sans-serif;
-    background-color: #ab4493;
+    background-color: #ffffff;
 }
 
+.contacto_css {
+    height: 100%;
+    font-family: 'Noto Sans', sans-serif;
+    background-image: url(../img/fondo1.jpg);
+    background-position: center;
+    background-repeat: repeat;
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .contact_form {
-
-    width: 460px;
-    height: auto;
-    margin: 80px auto;
+    width: 100%;
+    max-width: 460px;
     border-radius: 10px;
-    padding-top: 30px;
-    padding-bottom: 20px;
+    padding: 30px;
     background-color: #fbfbfb;
-    padding-left: 30px;
-    margin-top: 10%;
-    margin-bottom: 10%;
 }
 
 
-input {
-    background-color: #fbfbfb;
-    width: 408px;
+input,
+textarea {
+    width: 100%;
     height: 40px;
+    padding: 10px;
     border-radius: 5px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #ab4493;
+    border: 1px solid #ab4493;
     margin-top: 10px;
-    padding-left: 10px;
     margin-bottom: 20px;
 }
-
 
 textarea {
-    background-color: #fbfbfb;
-    width: 405px;
     height: 150px;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #ab4493;
-    margin-top: 10px;
-    padding-left: 10px;
-    margin-bottom: 20px;
     padding-top: 15px;
 }
 
-
 label {
     display: block;
-    float: center;
+    text-align: center;
 }
 
-
-.collapse .gitnavbar-collapse button {
+.formulario button {
     height: 45px;
     padding-left: 5px;
     padding-right: 5px;
@@ -498,65 +512,50 @@ label {
     border-color: #ab4493;
     border-style: solid;
     border-radius: 10px;
-    width: 220px;
+    width: 100%;
     cursor: pointer;
 }
 
-
-button p {
+.formulario button p {
     color: #fff;
 }
-
 
 span {
     color: #ab4493;
 }
-
 
 .aviso {
     font-size: 13px;
     color: #0e0e0e;
 }
 
-
-.formulario h1 {
+h1 {
     font-size: 39px;
-    text-align: letf;
+    text-align: center;
+    /* Corregir "letf" a "center" */
     padding-bottom: 20px;
     color: #ab4493;
 }
 
-
-.formulario h3 {
+h3 {
     font-size: 16px;
     padding-bottom: 30px;
     color: #0e0e0e;
 }
-
 
 p {
     font-size: 14px;
     color: #0e0e0e;
 }
 
-
-::-webkit-input-placeholder {
+/* Placeholder en Chrome */
+::placeholder {
     color: #a8a8a8;
 }
 
-
-::-webkit-textarea-placeholder {
-    color: #a8a8a8;
-}
-
-
-.formulario input:focus {
-    outline: 0;
-    border: 1px solid #97d848;
-}
-
-
-.formulario textarea:focus {
+/* Estilos para el foco en los campos */
+input:focus,
+textarea:focus {
     outline: 0;
     border: 1px solid #97d848;
 }
