corregido margin bottom en footer

--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,6 @@ footer {
 }
 
 .logo {
-
     display: flex;
 }
 
@@ -740,4 +739,5 @@ footer p {
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    margin-bottom: 0%;
 }
