--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,32 +1,46 @@
-.footer{
+footer {
     background-image: url(../img/prism.png);
-    .logo{
+
+    .logo {
         display: flex;
-        h6{
-            font-size: 30px;
-            font-family: 'Inter', sans-serif;
-            color: #dbdbdb;
-        }
     }
-    .footer-container{
+
+    h6 {
+        font-size: 30px;
+        font-family: 'Inter', sans-serif;
+        color: #dbdbdb;
+    }
+
+    .footer-container {
         font-size: 15px;
-        display: flex;
-        justify-content: center;
+        @extend %flex;
         padding-left: 10%;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        .iconos{
-            display: flex;
-            padding-right: 15%;
-            a{
+
+        .iconos {
+            @extend %flex;
+            padding-right: 10%;
+          
+            a {
                 padding: 2%;
+                -webkit-transition: 1s linear;
+                transition: 1s linear;
+                &:hover {
+                    -webkit-transform: scale(0.6);
+                    transform: scale(0.6);
+                }
             }
         }
+
+
     }
-    p{
-        color: #dbdbdb;
+
+    p {
+        color: $primary-color;        ;
         display: flex;
         align-items: flex-end;
         justify-content: center;
         margin-bottom: 0%;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 }
