--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,6 @@
-$primary-color: #ffffff;
-$secondary-color: #ffd400d9;
-$link-hover-color: #7e31dd4f;
-$navbar-bg-color: rgba(138, 138, 138, 0.548);
-$btn-bg-color: #00000045;
-
+@import "./base/variables";
+@import "./base/generales";
+@import "./components/header";
+@import "./components/layout";
+@import "./components/footer";
+@import "./base/mediaquerys";
