--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,70 +1,86 @@
+
 header {
+    .navbar {
+        --bs-navbar-brand-margin-end: 20% !important;
+    }
+
     nav {
+
         background-image: url(../img/prism.png);
+
         .navbar-brand {
             color: $primary-color;
             font-size: 30px;
             font-family: 'Inter', sans-serif;
             margin-left: 10px;
+
             .logo {
                 width: 50px;
                 display: inline-block;
             }
+
             span {
                 font-weight: bold;
             }
-            &:hover {
-                color: $primary-color;
-            }
         }
-        .navbar {
-            --bs-navbar-brand-margin-end: 20%;
-        }
+
+
+
         .collapse {
             .navbar-collapse {
                 ul {
                     li {
                         a {
                             color: $primary-color;
-                            &:hover {
-                                color: $link-hover-color;
-                            }
                         }
                     }
                 }
             }
         }
-        .navbar-toggler {
-            background-color: $navbar-bg-color;
-            &:focus {
-                box-shadow: 0 0 4px rgba(0, 0, 0, 0.50);
-            }
+
+        .navbar-brand:hover {
+            color: $primary-color;
         }
+
+        .nav-link:focus,
+        .nav-link:hover {
+            color: var(--bs-nav-link-hover-color);
+            color: yellow;
+        }
+
+        .navbar-toggler:focus {
+            box-shadow: 0 0 4px rgba(0, 0, 0, 0.50);
+        }
+
+        .navbar-toggler {
+            background-color: rgba(138, 138, 138, 0.548);
+        }
+
         .nav-link {
             color: $primary-color;
             font-size: 20px;
-            &:focus {
-                &:hover {
-                    color: $link-hover-color;
-                    color: yellow;
-                }
-            }
         }
+
         .dropdown-item {
             color: rgb(0, 0, 0);
         }
-        .dropdown-menu {
-            font-size: 20px;
-            --bs-dropdown-bg: $secondary-color;
-            --bs-dropdown-link-hover-bg: $link-hover-color;
+
+        ul {
+            .dropdown-menu {
+                font-size: 20px;
+                --bs-dropdown-bg: #ffd400d9;
+                --bs-dropdown-link-hover-bg: #7e31dd4f;
+            }
         }
-    }
-    .d-flex {
-        display: flex;
-        align-items: center;
-    }
-    .btn {
-        color: #ffffff;
-        --bs-btn-bg: $btn-bg-color;
+
+        .d-flex {
+            display: flex;
+            align-items: center;
+        }
+
+        .btn {
+            color: $primary-color;
+            --bs-btn-bg: #00000045;
+        }
     }
 }
