--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,32 +1,48 @@
-/** LISTAS */
-/** EXTENS */
+/* LISTAS */
+/* MAPAS */
+/* EXTEND */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Press+Start+2P&display=swap");
 .hero .novedad h3, .mapa, .contacto_css, .signupFrm, footer .footer-container, footer .footer-container .iconos {
   display: flex;
   justify-content: center;
   align-items: center; }
 
-/*! TIPOGRAFIA **/
-/*! RESET **/
+/* MIXIN */
+/*! TIPOGRAFIA */
+/*! RESET */
 * {
   margin: 0;
   padding: 0; }
 
 body h2 {
   font-family: 'Inter', sans-serif;
-  font-size: 30px;
-  color: #ffffff;
+  padding: 20px;
   border-radius: 20px;
-  margin: 20px;
+  text-decoration: none;
+  outline: 1px solid;
+  outline-color: rgba(255, 255, 255, 0.151);
+  transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+  font-family: 'Inter', sans-serif;
+  font-size: 30px;
+  padding: 2%;
+  color: #ffffff;
+  border-radius: 50px;
+  margin: 0 auto;
+  max-width: fit-content;
   text-align: center;
   background: white;
   background: linear-gradient(180deg, white 0%, rgba(10, 6, 22, 0.779149) 20%, black 50%, rgba(10, 6, 22, 0.793155) 80%, white 100%); }
+  body h2:hover {
+    box-shadow: inset 0 0 20px rgba(102, 49, 172, 0.5), 0 0 20px rgba(255, 189, 9, 0.644);
+    outline-color: rgba(49, 138, 172, 0);
+    outline-offset: 80px;
+    text-shadow: 1px 1px 6px #fff; }
 
 span {
   color: #ae58ff;
   font-weight: bold; }
 
-/** WHATSAPP **/
+/* WHATSAPP */
 .fixed {
   position: fixed;
   bottom: 25%;
@@ -40,9 +56,9 @@ span {
       transform: scale(0.8); }
 
 .boton {
-  background-color: #ae58ff;
-  border: 2px solid black;
-  color: #ffffff; }
+  background-color: black;
+  border: 1px solid #ffd500;
+  color: #ffd500; }
 
 header .navbar {
   --bs-navbar-brand-margin-end: 20% !important; }
@@ -105,21 +121,31 @@ header nav {
     flex-wrap: wrap; }
   .hero .novedad a {
     font-family: 'Inter', sans-serif;
+    padding: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    outline: 1px solid;
+    outline-color: rgba(255, 255, 255, 0.151);
+    transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+    font-family: 'Inter', sans-serif;
     padding: 15px;
     border-radius: 20px;
     text-decoration: none; }
     .hero .novedad a:hover {
-      background-color: #b88be2; }
+      box-shadow: inset 0 0 20px rgba(102, 49, 172, 0.5), 0 0 20px rgba(255, 189, 9, 0.644);
+      outline-color: rgba(49, 138, 172, 0);
+      outline-offset: 80px;
+      text-shadow: 1px 1px 6px #fff; }
 
 .hero .container-1 {
-  margin-top: 30px;
   display: flex;
   justify-content: start;
   align-items: center;
+  margin-top: 30px;
   background: white;
   background: linear-gradient(180deg, white 0%, rgba(10, 6, 22, 0.779149) 20%, black 50%, rgba(10, 6, 22, 0.793155) 80%, white 100%); }
   .hero .container-1 .presentacion__parrafo .welcome {
-    color: #ffd400d9; }
+    color: #ffd500; }
   .hero .container-1 .presentacion__parrafo p {
     text-align: center;
     font-family: 'Inter', sans-serif;
@@ -139,20 +165,30 @@ header nav {
     font-family: 'Inter', sans-serif;
     padding: 20px;
     border-radius: 20px;
+    text-decoration: none;
+    outline: 1px solid;
+    outline-color: rgba(255, 255, 255, 0.151);
+    transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+    font-family: 'Inter', sans-serif;
+    padding: 20px;
+    border-radius: 20px;
     display: inline-block;
     text-decoration: none;
     margin: 25%;
     margin-bottom: 50px;
     margin-top: 0%; }
     .hero .container-1 .suscribir a:hover {
-      background-color: #b88be2; }
+      box-shadow: inset 0 0 20px rgba(102, 49, 172, 0.5), 0 0 20px rgba(255, 189, 9, 0.644);
+      outline-color: rgba(49, 138, 172, 0);
+      outline-offset: 80px;
+      text-shadow: 1px 1px 6px #fff; }
 
 .productos {
   display: flex;
+  justify-content: space-evenly;
+  align-items: normal;
   flex-wrap: wrap;
-  margin: 5%;
-  flex-wrap: wrap;
-  justify-content: space-evenly; }
+  margin: 5%; }
   .productos .card {
     width: 18rem;
     margin-bottom: 20px;
@@ -179,10 +215,10 @@ header nav {
     font-size: 20px; }
 
 .varios ul {
-  list-style: none;
   display: flex;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+  list-style: none; }
   .varios ul img {
     width: 80px;
     margin: 10%; }
@@ -190,21 +226,28 @@ header nav {
 /** PAGE GALERIA **/
 .grid_galeria {
   display: grid;
+  justify-content: center;
+  align-items: normal;
   grid-template-columns: repeat(3, 3fr);
   grid-gap: 10px;
-  justify-content: center;
   margin: 20px auto;
   text-align: center;
   width: 100%;
   height: 100%;
   overflow: hidden; }
   .grid_galeria .img_galeria img {
+    border-radius: 10px;
+    background-color: #000000;
+    -webkit-transition: 1s linear;
+    transition: 0.5s linear;
     width: 100%;
     height: 100%;
     object-fit: cover;
     box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75); }
+    .grid_galeria .img_galeria img:hover {
+      border-radius: 200px; }
 
 /** PAGE NOSOTROS **/
 .nosotros {
@@ -395,10 +438,10 @@ footer {
           -webkit-transform: scale(0.6);
           transform: scale(0.6); }
   footer p {
-    color: #ffffff;
     display: flex;
-    align-items: flex-end;
     justify-content: center;
+    align-items: flex-end;
+    color: #ffffff;
     margin-bottom: 0%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
 
