--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,28 +1,64 @@
 $primary-color: #ffffff;
-$secondary-color: #ffd400d9;
+$secondary-color: #ffd500;
 $tertiary-color: rgb(174, 88, 255);
 $link-hover-color: #7e31dd4f;
 $navbar-bg-color: rgba(138, 138, 138, 0.548);
 $btn-bg-color: #00000045;
 
-/** LISTAS */ 
+/* LISTAS */
 
 $font-size: 10px, 20px, 30px, 40px, 50px;
 
+/* MAPAS */
+
 $boton: (
-    bg-boton: rgb(174, 88, 255),
-    border-boton: 2px solid black,
-    color-text: #ffffff,
+    bg-boton: rgb(0, 0, 0),
+    border-boton: 1px solid $secondary-color,
+    color-text: $secondary-color,
 );
 
-/** EXTENS */ 
+/* EXTEND */
 
-%flex{
+%flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* MIXIN */
 
+@mixin flex($flex, $justify, $align) {
+    display: $flex;
+    justify-content: $justify;
+    align-items: $align ;
+}
 
+@mixin button-styles {
+    font-family: 'Inter', sans-serif;
+    padding: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    outline: 1px solid;
+    outline-color: rgba(255, 255, 255, 0.151);
+    transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+
+    &:hover {
+        box-shadow: inset 0 0 20px rgba(102, 49, 172, 0.5), 0 0 20px rgba(255, 189, 9, 0.644);
+        outline-color: rgba(49, 138, 172, 0);
+        outline-offset: 80px;
+        text-shadow: 1px 1px 6px #fff;
+    }
+}
+
+@mixin img-styles {
+    border-radius: 10px;
+    background-color: #000000;
+    -webkit-transition: 1s linear;
+    transition: 0.5s linear;
+
+    &:hover {
+        border-radius: 200px;
+
+    }
+}
 
