--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -12,35 +12,31 @@
         flex-wrap: wrap;
 
         h3 {
+            @extend %flex;
             font-size: nth($font-size, 3);
             color: yellow;
             font-weight: bold;
             font-style: italic;
             flex-wrap: wrap;
-            @extend %flex;
+
 
 
         }
 
         a {
+            @include button-styles;
             font-family: 'Inter', sans-serif;
             padding: 15px;
             border-radius: 20px;
             text-decoration: none;
-
-            &:hover {
-                background-color: rgb(184, 139, 226);
-            }
         }
     }
 
     .container-1 {
+        @include flex (flex, start, center);
         margin-top: 30px;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        background: rgb(255,255,255);
-        background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(10,6,22,0.7791491596638656) 20%, rgba(0,0,0,1) 50%, rgba(10,6,22,0.7931547619047619) 80%, rgba(255,255,255,1) 100%);
+        background: rgb(255, 255, 255);
+        background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(10, 6, 22, 0.7791491596638656) 20%, rgba(0, 0, 0, 1) 50%, rgba(10, 6, 22, 0.7931547619047619) 80%, rgba(255, 255, 255, 1) 100%);
 
         .presentacion__parrafo {
             .welcome {
@@ -58,7 +54,7 @@
         }
 
         .suscribir {
-        
+
             p {
                 padding: 20px;
                 font-family: 'Inter', sans-serif;
@@ -69,7 +65,9 @@
                 text-align: center;
 
             }
+
             a {
+                @include button-styles;
                 font-family: 'Inter', sans-serif;
                 padding: 20px;
                 border-radius: 20px;
@@ -78,23 +76,15 @@
                 margin: 25%;
                 margin-bottom: 50px;
                 margin-top: 0%;
-
-                &:hover {
-                    background-color: rgb(184, 139, 226);
-                    
-                }
             }
         }
     }
 }
 
 .productos {
-
-    display: flex;
+    @include flex (flex, space-evenly, normal);
     flex-wrap: wrap;
     margin: 5%;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
 
     .card {
         width: 18rem;
@@ -138,10 +128,8 @@
 
 .varios {
     ul {
+        @include flex(flex, space-around, center);
         list-style: none;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
 
         img {
             width: 80px;
@@ -153,10 +141,9 @@
 /** PAGE GALERIA **/
 
 .grid_galeria {
-    display: grid;
+    @include flex(grid, center, normal);
     grid-template-columns: repeat(3, 3fr);
     grid-gap: 10px;
-    justify-content: center;
     margin: 20px auto;
     text-align: center;
     width: 100%;
@@ -165,6 +152,7 @@
 
     .img_galeria {
         img {
+            @include img-styles;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -195,23 +183,23 @@
         color: black;
         font-size: 20px;
         padding: 20px;
-        
+
     }
 
     .titulo {
         font-weight: bold;
-       
+
     }
 
     .parrafo {
         font-weight: normal;
-        
+
     }
 }
 
 .mapa {
     @extend %flex;
-   
+
 }
 
 /** PAGE CONTACTO **/
