--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -166,11 +166,12 @@
 /** PAGE NOSOTROS **/
 
 .nosotros {
+
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     display: flex;
+    background-size: auto;
     background-position: center;
-    background-size: contain;
     background-repeat: no-repeat;
     align-items: start;
 
